Update product Q&A agentic chatbot

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "langchain>=0.3.27",
+    "langchain-chroma>=0.2.6",
+    "langchain-community>=0.3.29",
     "langchain-ollama>=0.3.8",
     "langchain-openai>=0.3.33",
+    "langchain-text-splitters>=0.3.11",
     "langgraph>=0.6.7",
+    "pandas>=2.3.2",
+    "pypdf>=6.0.0",
 ]
