--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-chroma>=0.2.6",
     "langchain-community>=0.3.29",
+    "langchain-core>=0.3.76",
     "langchain-ollama>=0.3.8",
     "langchain-openai>=0.3.33",
     "langchain-text-splitters>=0.3.11",
